--- a/src/index.css
+++ b/src/index.css
@@ -292,7 +292,7 @@ footer {
   justify-content: center;
   border: 1px solid peachpuff;
   border-radius: 5px;
-  font-size: 35px;
+  font-size: 15px;
   height: 100%;
   padding: 40px;
   align-items: center;
@@ -303,6 +303,7 @@ footer {
 .grid-item a {
   background-color: peachpuff;
   color: darkgray;
+  margin: 10px;
 }
 
 .item-1{
